# tank-sim

./: .clang-format  CMakeLists.txt  CMakePresets.json  compile_commands,json  compile_commands.json
cmake/: pico_toolchain.cmake
src/: CMakeLists.txt  control_map.c  control_map.h  freertos_hooks.c  hx710c.c  input_task.c  input_task.h  keyboard_task.c  keyboard_task.h  main.c  pins.h  reporter.c  reporter.h  tank_assert.c  tank_assert.h  usb.c  usb.h  usb_descriptors.c  usb_task.c
src/config/: config.c  config.h
src/control/: control_map.c  control_map.h  hx710c.h  input_task.c  input_task.h  types.h
src/freertos/RP2040/: port.c
src/freertos/config/: FreeRTOSConfig.h
src/terminal/: terminal.c  terminal.h
src/usb_keyboard/: keyboard_task.c  keyboard_task.h  scan_codes.h  types.h  usb_descriptors.c  usb_task.h
src/util/: helpers.h  tank_assert.c  tank_assert.h
